<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/undo"
        android:icon="@drawable/undo"
        android:title="@string/undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/redo"
        android:icon="@drawable/redo"
        android:title="@string/redo"
        app:showAsAction="always" />

    <item
        android:id="@+id/clear"
        android:icon="@drawable/clear"
        android:title="@string/clear"
        app:showAsAction="always" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/load"
        android:icon="@drawable/load"
        android:title="@string/load"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save"
        android:icon="@drawable/save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/help_outline"
        android:title="@string/help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />



</menu>