<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/main_text"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:gravity="top"
        android:inputType="text|textMultiLine"
        android:hint="@string/insert_text_here"
        app:layout_constraintTop_toBottomOf="@+id/convert_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/convert_button"
        android:layout_width="0dip"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/convert"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/copy_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_text"
        />

    <Button
        android:id="@+id/copy_button"
        android:layout_width="0dip"
        android:layout_height="60dp"
        android:text="@string/copy_to_clipboard"
        android:layout_margin="2dp"
        app:layout_constraintLeft_toRightOf="@id/convert_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_text"
        />



</androidx.constraintlayout.widget.ConstraintLayout>